--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "private": true,
   "dependencies": {
     "@types/jest": "^20.0.8",
+    "@types/lodash": "^4.14.74",
     "@types/node": "^8.0.25",
+    "@types/node-uuid": "0.0.28",
     "@types/react": "^16.0.5",
     "@types/react-dom": "^15.5.4",
     "@types/react-redux": "^5.0.5",
+    "@types/react-router": "^4.0.15",
+    "lodash": "^4.17.4",
+    "node-uuid": "^1.4.8",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-scripts-ts": "2.6.0",
-    "redux": "^3.7.2"
+    "redux": "^3.7.2",
+    "save": "^2.3.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
