--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@types/react-dom": "^15.5.4",
     "@types/react-redux": "^5.0.5",
     "@types/react-router": "^4.0.15",
+    "@types/react-router-dom": "^4.0.7",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.6.0",
     "redux": "^3.7.2",
     "save": "^2.3.1"
