--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@types/react-redux": "^5.0.5",
     "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.7",
+    "@types/redux-logger": "^3.0.3",
+    "@types/redux-promise": "^0.5.26",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
     "react": "^15.6.1",
@@ -21,6 +23,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts-ts": "2.6.0",
     "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-promise": "^0.5.3",
     "save": "^2.3.1"
   },
   "scripts": {
