--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-router-dom": "^4.0.7",
     "@types/redux-logger": "^3.0.3",
     "@types/redux-promise": "^0.5.26",
+    "@types/redux-thunk": "^2.1.0",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
     "react": "^15.6.1",
@@ -25,6 +26,7 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-promise": "^0.5.3",
+    "redux-thunk": "^2.2.0",
     "save": "^2.3.1"
   },
   "scripts": {
