--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/redux-thunk": "^2.1.0",
     "lodash": "^4.17.4",
     "node-uuid": "^1.4.8",
+    "normalizr": "^3.2.3",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
