--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-redux": "^5.0.5",
     "@types/react-router": "^4.0.15",
     "@types/react-router-dom": "^4.0.7",
+    "@types/react-router-redux": "^5.0.8",
     "@types/redux-logger": "^3.0.3",
     "@types/redux-promise": "^0.5.26",
     "@types/redux-thunk": "^2.1.0",
@@ -23,6 +24,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
     "react-scripts-ts": "2.6.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
